--- a/frontend/styles/InstructionsComponent.module.css
+++ b/frontend/styles/InstructionsComponent.module.css
@@ -1,63 +1,63 @@
 .container{
-	color: white;
-	display: flex;
-	flex-direction: column;
-	height: 80vh;
-	width: 100%;
-	align-items: center;
+    color: #F6F1F1;
+    display: flex;
+    flex-direction: column;
+    height: 80vh;
+    width: 100%;
+    align-items: center;
 }
 
 .header_container{
-	margin-bottom: 6rem;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+    margin-bottom: 6rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .header_container h1{
-	font-size: 64px;
+    font-size: 64px;
 
 }
 
 
 .header_container h1 span{
-	background: linear-gradient(140deg, rgba(54,190,255,1) 0%, rgba(115,63,241,1) 100%);
-	background-clip: text;
-	color: transparent;
+    background: linear-gradient(140deg, rgba(54,190,255,1) 0%, rgba(115,63,241,1) 100%);
+    background-clip: text;
+    color: transparent;
 }
 
 .header_container p{
-	font-size: 20px;
+    font-size: 20px;
 
 }
 
 .header_container p span{
-	color: #D73719;
-	width: 197px;
+    color: #D73719;
+    width: 197px;
 height: 36px;
 
 
 background: rgba(255, 255, 255, 0.08);
 border-radius: 8px;
-	padding: .5rem 1rem .5rem .5rem;
-	margin-left: .3rem;
+    padding: .5rem 1rem .5rem .5rem;
+    margin-left: .3rem;
 }
 
 
 
 
 .buttons_container{
-	display: flex;
-	flex-direction: column;
-	flex-grow: 1;
-	width: 100%;
-	align-content: center;
-	flex-wrap: wrap;
-	gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    width: 100%;
+    align-content: center;
+    flex-wrap: wrap;
+    gap: 1rem;
 }
 
 .button{
-	display: flex;
+    display: flex;
 flex-direction: row;
 align-items: center;
 justify-content: center;
@@ -84,13 +84,13 @@ font-size: 20px;
 line-height: 28px;
 }
 .footer{
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	gap:1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:1rem;
 }
 .icons_container{
-	display: flex;
-	gap: 2rem;
-	margin-bottom: .5rem;
+    display: flex;
+    gap: 2rem;
+    margin-bottom: .5rem;
 }
