--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -2,37 +2,36 @@
 
 html,
 body {
-	background-color: black;
-	font-family: 'Rubik';
-	font-weight: normal;
+    background-color: #2B2730;
+    font-family: 'Rubik';
+    font-weight: normal;
 }
+
 h1{
-	margin-bottom: 1rem;
+    margin-bottom: 1rem;
 }
 h2{
-	margin-bottom: .5rem;
-	font-weight: normal;
-
+    margin-bottom: .5rem;
+    font-weight: normal;
 }
 
 p{
-	line-height: 1.5rem;
-	font-weight: lighter;
-
+    line-height: 1.5rem;
+    font-weight: lighter;
 }
 
 a {
-	color: inherit;
-	text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 * {
-	box-sizing: border-box;
-	padding: 0;
-	margin: 0;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 @media (prefers-color-scheme: dark) {
-	html {
-	}
+    html {
+    }
 }
